Chore: Format code